--- a/app/src/main/res/layout/activity_sotaylaixe.xml
+++ b/app/src/main/res/layout/activity_sotaylaixe.xml
@@ -2,141 +2,171 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            app:title="Sổ tay lái xe"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="Sổ tay lái xe">
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="3">-->
+
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:text="@string/select_type_car"-->
+            <!--android:textColor="#39485b"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textStyle="bold" />-->
+
+        <!--<Spinner-->
+            <!--android:id="@+id/spinLoaiXe"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="2"-->
+            <!--android:backgroundTint="@color/colorBlackGray"-->
+            <!--android:textSize="18sp"-->
+            <!--tools:ignore="UnusedAttribute" />-->
+    <!--</LinearLayout>-->
+
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/colorGray" />-->
+
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/custom_line"
-        android:weightSum="3"
-        android:layout_marginStart="10dp">
-
-        <TextView
-            android:text="@string/select_type_car"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
-            android:textColor="#39485b"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-        <Spinner
-            android:id="@+id/spinLoaiXe"
-            android:backgroundTint="@color/colorBlackGray"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            tools:ignore="UnusedAttribute" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/custom_line"
         android:weightSum="3"
         tools:ignore="RtlHardcoded">
 
         <TextView
-            android:text="@string/select_car"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
-            android:textColor="#39485b"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/select_car"
+            android:textColor="#39485b"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <Spinner
-            android:id="@+id/spinChungLoaiXe"
-            android:backgroundTint="@color/colorBlackGray"
+            android:id="@+id/spinVehicle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:backgroundTint="@color/colorBlackGray"
+            android:textSize="18sp"
             tools:ignore="UnusedAttribute" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorGray" />
+
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/custom_line"
-        android:weightSum="3"
-        android:layout_marginStart="10dp">
+        android:weightSum="3">
 
         <TextView
-            android:text="@string/select_part"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
-            android:textColor="#39485b"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/select_part"
+            android:textColor="#39485b"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <Spinner
             android:id="@+id/spinNhomCongTac"
-            android:backgroundTint="@color/colorBlackGray"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:backgroundTint="@color/colorBlackGray"
+            android:textSize="18sp"
             tools:ignore="UnusedAttribute" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorGray" />
 
     <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/custom_line"
-        android:weightSum="3"
-        android:layout_marginStart="10dp">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="10dp"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
         <TextView
-            android:text="@string/detail_part"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
-            android:textColor="#39485b"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/detail_part"
+            android:textColor="#39485b"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <Spinner
-            android:id="@+id/spinChiTietPhuTung"
-            android:backgroundTint="@color/colorBlackGray"
+            android:id="@+id/spinCongtac"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:backgroundTint="@color/colorBlackGray"
+            android:textSize="18sp"
             tools:ignore="UnusedAttribute" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorGray" />
+
     <Button
-        android:layout_gravity="center_horizontal"
-        android:text="@string/search"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/search" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="5dp">
 
     </android.support.v7.widget.RecyclerView>
 
