--- a/app/src/main/res/layout/activity_sotaylaixe.xml
+++ b/app/src/main/res/layout/activity_sotaylaixe.xml
@@ -49,6 +49,7 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -77,6 +78,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="2"
                             android:backgroundTint="@color/colorBlackGray"
+                            android:popupBackground="@color/colorPrimary"
                             android:textSize="18sp"
                             tools:ignore="UnusedAttribute" />
                     </LinearLayout>
@@ -110,6 +112,8 @@
                             android:layout_height="match_parent"
                             android:layout_weight="2"
                             android:backgroundTint="@color/colorBlackGray"
+                            android:popupBackground="@color/colorPrimary"
+
                             android:textSize="18sp"
                             tools:ignore="UnusedAttribute" />
                     </LinearLayout>
@@ -144,6 +148,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="2"
                             android:backgroundTint="@color/colorBlackGray"
+                            android:popupBackground="@color/colorPrimary"
                             android:textSize="18sp"
                             tools:ignore="UnusedAttribute" />
                     </LinearLayout>
@@ -177,6 +182,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="2"
                             android:backgroundTint="@color/colorBlackGray"
+                            android:popupBackground="@color/colorPrimary"
                             android:textSize="18sp"
                             tools:ignore="UnusedAttribute" />
                     </LinearLayout>
