--- a/app/src/main/res/layout/dialog_specification.xml
+++ b/app/src/main/res/layout/dialog_specification.xml
@@ -60,6 +60,29 @@
             android:textColor="@color/colorBlack" />
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/llStyle"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:textSize="18sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="@string/style"
+            android:textColor="@color/colorBlack" />
+
+        <TextView
+            android:textSize="18sp"
+            android:id="@+id/tvStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:textColor="@color/colorBlack" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
