--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="80dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:foreground="@drawable/ripple_effect"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="4dp">
 
@@ -46,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_margin="10dp"
+        android:foreground="@drawable/ripple_effect"
         app:cardCornerRadius="4dp">
 
         <LinearLayout
@@ -78,7 +80,7 @@
         android:layout_height="80dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-
+        android:foreground="@drawable/ripple_effect"
         app:cardCornerRadius="4dp">
 
         <LinearLayout
