--- a/app/src/main/res/layout/activity_trathongtin.xml
+++ b/app/src/main/res/layout/activity_trathongtin.xml
@@ -36,6 +36,7 @@
         tools:context="dev.edmt.textrecognitionimage.MainActivity">
 
         <ImageView
+            android:padding="50dp"
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="300dp"
