--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cvTraThongTin"
+        android:id="@+id/cvLicensePlates"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_margin="10dp"
@@ -75,7 +75,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cv_BienBanViPham"
+        android:id="@+id/cvSearchDrivingLicense"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginLeft="10dp"
@@ -101,7 +101,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorGray"
                 android:gravity="center"
-                android:text="@string/violation_records"
+                android:text="@string/search_driving_license"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp" />
         </LinearLayout>
