--- a/app/src/main/res/layout/dialog_driving_license.xml
+++ b/app/src/main/res/layout/dialog_driving_license.xml
@@ -26,6 +26,13 @@
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="20sp" />
 
+            <ImageView
+                android:id="@+id/ivAvatar"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
