--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cvLicensePlates"
+        android:id="@+id/cvRecognizerLicensePlates"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_margin="10dp"
@@ -60,14 +60,14 @@
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:layout_margin="3dp"
-                android:src="@drawable/search2"
+                android:src="@drawable/ic_recogrizer_camera"
                 tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="@string/seach_information"
+                android:text="@string/recognizer_license_plates_vehicle"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -107,10 +107,36 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:id="@+id/cvSearchLicensePlates"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_margin="10dp"
+        android:foreground="@drawable/ripple_effect"
+        app:cardCornerRadius="4dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorGray"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/ivAvatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:src="@drawable/search2"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/search_license_plates_vehicle"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
