--- a/app/src/main/res/layout/activity_trathongtin.xml
+++ b/app/src/main/res/layout/activity_trathongtin.xml
@@ -6,29 +6,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="Tra thông tin">
+            android:padding="15dp"
+            android:src="@drawable/ic_arrow_back_white_24dp"
+            tools:ignore="ContentDescription" />
 
-        </android.support.v7.widget.Toolbar>
+        <TextView
+            android:id="@+id/tvTitleNoteBook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:drawablePadding="5dp"
+            android:gravity="center"
+            android:text="@string/recognizer_license_plates_vehicle"
+            android:textColor="@color/colorWhile"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -36,39 +45,50 @@
         tools:context="dev.edmt.textrecognitionimage.MainActivity">
 
         <ImageView
-            android:padding="50dp"
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
+            android:padding="50dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_camera"
             tools:ignore="ContentDescription" />
 
         <Button
             android:id="@+id/btnProcess"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@drawable/button_effect"
+            android:padding="5dp"
             android:text="@string/read_image" />
 
 
-        <EditText
-            android:visibility="invisible"
-            android:textColor="@color/colorWhile"
+        <TextView
             android:id="@+id/tvResult"
-            android:layout_width="130dp"
-            android:layout_height="70dp"
-            android:layout_below="@id/btnProcess"
-            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@drawable/border_linese"
-            android:freezesText="true"
-            android:gravity="center_horizontal"
+            android:textColor="@color/colorWhile"
             android:textSize="24sp"
-            tools:ignore="LabelFor,TextFields" />
+            android:visibility="invisible" />
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/btnSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button_effect"
+            android:padding="5dp"
+            android:text="@string/search_infor"
+            android:visibility="invisible" />
+    </LinearLayout>
+
+
 </LinearLayout>
