--- a/app/src/main/res/layout/activity_infor_vehicle.xml
+++ b/app/src/main/res/layout/activity_infor_vehicle.xml
@@ -63,6 +63,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvLicensePlates"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -85,6 +86,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvCategoryVehicle"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -107,6 +109,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvUnit"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -129,6 +132,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvNumberRegister"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -151,6 +155,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvDateRegiter"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -173,6 +178,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvFrameNumber"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -195,6 +201,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvMachineNumber"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -217,6 +224,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvSource"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -239,6 +247,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvRankQuality"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -261,6 +270,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvDateIncrease"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -283,6 +293,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvDateUsing"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
@@ -305,6 +316,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:id="@+id/tvNotes"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
                     android:layout_width="0dp"
