--- a/app/src/main/res/layout/activity_infor_vehicle.xml
+++ b/app/src/main/res/layout/activity_infor_vehicle.xml
@@ -33,6 +33,7 @@
     </RelativeLayout>
 
     <com.tmall.ultraviewpager.UltraViewPager
+        android:layout_margin="10dp"
         android:id="@+id/ultra_viewpager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -63,6 +64,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:textColor="@color/colorRed"
                     android:id="@+id/tvLicensePlates"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
@@ -70,6 +72,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -93,6 +99,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -109,6 +119,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <TextView
+                    android:textColor="@color/colorRed"
                     android:id="@+id/tvUnit"
                     android:textSize="16sp"
                     android:gravity="center_vertical"
@@ -116,6 +127,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -139,6 +154,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -162,6 +181,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -185,6 +208,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -208,6 +235,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -231,6 +262,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -254,6 +289,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -277,6 +316,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
@@ -300,6 +343,10 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
             </LinearLayout>
+            <View
+                android:background="@color/colorGray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:padding="10dp"
                 android:layout_width="match_parent"
