--- a/app/src/main/res/layout/activity_recognizer_license_vehicle.xml
+++ b/app/src/main/res/layout/activity_recognizer_license_vehicle.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -56,18 +55,19 @@
 
         <Button
             android:id="@+id/btnProcess"
-            android:layout_width="wrap_content"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="@drawable/button_effect"
+            android:background="@drawable/ripple_effect_button"
+            android:textColor="@color/colorWhile"
             android:padding="5dp"
             android:text="@string/read_image" />
 
 
         <TextView
             android:id="@+id/tvResult"
-            android:layout_width="wrap_content"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"
@@ -81,12 +81,13 @@
 
         <Button
             android:id="@+id/btnSearch"
-            android:layout_width="wrap_content"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/button_effect"
+            android:background="@drawable/ripple_effect_button"
+            android:textColor="@color/colorWhile"
             android:padding="5dp"
-            android:text="@string/search_infor"
+            android:text="@string/search_license_plates_vehicle"
             android:visibility="invisible" />
     </LinearLayout>
 
