--- a/app/src/main/res/layout/activity_notebook.xml
+++ b/app/src/main/res/layout/activity_notebook.xml
@@ -23,9 +23,9 @@
         <TextView
             android:id="@+id/tvTitleNoteBook"
             android:layout_width="wrap_content"
-            android:drawablePadding="5dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:drawablePadding="5dp"
             android:gravity="center"
             android:text="@string/notebook"
             android:textColor="@color/colorWhile"
@@ -49,15 +49,26 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <LinearLayout
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
+                        android:text="Tiêu chí chọn"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginStart="20dp"
                         android:orientation="horizontal"
                         android:weightSum="3"
                         tools:ignore="RtlHardcoded">
@@ -68,9 +79,8 @@
                             android:layout_weight="1"
                             android:gravity="center_vertical"
                             android:text="@string/select_car"
-                            android:textColor="#39485b"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="18sp" />
 
                         <Spinner
                             android:id="@+id/spinVehicle"
@@ -86,13 +96,17 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginStart="20dp"
                         android:background="@color/colorGray" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginStart="20dp"
                         android:orientation="horizontal"
                         android:weightSum="3">
 
@@ -102,9 +116,8 @@
                             android:layout_weight="1"
                             android:gravity="center_vertical"
                             android:text="@string/select_part"
-                            android:textColor="#39485b"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="18sp" />
 
                         <Spinner
                             android:id="@+id/spinMatter"
@@ -121,14 +134,17 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginStart="20dp"
                         android:background="@color/colorGray" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginStart="20dp"
                         android:orientation="horizontal"
                         android:weightSum="3">
 
@@ -138,9 +154,8 @@
                             android:layout_weight="1"
                             android:gravity="center_vertical"
                             android:text="@string/detail_part"
-                            android:textColor="#39485b"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="18sp" />
 
                         <Spinner
                             android:id="@+id/spinMatterChild"
@@ -156,12 +171,17 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginStart="20dp"
                         android:background="@color/colorGray" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginStart="20dp"
                         android:orientation="horizontal"
                         android:weightSum="3"
                         tools:ignore="RtlHardcoded">
@@ -172,9 +192,8 @@
                             android:layout_weight="1"
                             android:gravity="center_vertical"
                             android:text="@string/select_part_sub"
-                            android:textColor="#39485b"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="18sp" />
 
                         <Spinner
                             android:id="@+id/spinSubMatterChild"
@@ -202,19 +221,21 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <Button
-                android:drawablePadding="5dp"
                 android:id="@+id/btnSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="10dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
+                android:background="@drawable/ripple_effect_button"
+                android:drawablePadding="5dp"
+                android:padding="5dp"
                 android:text="@string/search"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorWhile" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/colorGray"/>
+                android:background="@color/colorGray" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview"
